--- a/style.css
+++ b/style.css
@@ -45,6 +45,22 @@ nav a:hover {
     transition: transform 0.1s;
 }
 
+
+.graficos-container_texto {
+    font-size: 1.3rem;
+    text-align: center;
+    padding: 2rem;
+    border: var(--secondary-color) solid 2px;
+  }
+  span {
+    font-weight: bold;
+    color: var(--secondary-color);
+   }
+
+   .destaque {
+    color: rgb(255, 0, 0);
+    font-weight: bold;
+  }
 footer {
     display: flex;
     align-items: center;
