--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 :root {
     --bg-color: #222831;
-    --primary-color: #DDDDDD;
-    --secondary-color: #92f054;
+    --primary-color: #fff;
+    --secondary-color: #ffc0cb;
     --font: "Nunito Sans", sans-serif;
 }
 
@@ -12,17 +13,18 @@ body {
     font-family: var(--font);
     height: 100vh;
     margin: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
-    background-color: var(--primary-color);
+    background-color: #ffc0cb;
     text-align: center;
-    padding: 1px;
 }
 
 h1 {
     font-size: 2rem;
-    color: var(--bg-color);
+    color: white;
      font-weight: 700;
 }
 
@@ -34,7 +36,7 @@ nav {
 
 nav a {
     text-decoration: none;
-    color: var(--bg-color);
+    color: white;
      margin: 0 2rem 1rem 0rem;
      font-size: 1.2rem;
 }
@@ -45,39 +47,50 @@ nav a:hover {
     transition: transform 0.1s;
 }
 
-
+.graficos-container {
+    margin: 5rem;
+  }
+  
 .graficos-container_texto {
     font-size: 1.3rem;
     text-align: center;
     padding: 2rem;
     border: var(--secondary-color) solid 2px;
   }
-  span {
+
+.spant {
     font-weight: bold;
     color: var(--secondary-color);
-   }
+}
 
-   .destaque {
-    color: rgb(255, 0, 0);
-    font-weight: bold;
-  }
+.container8 {
+    text-align: center;
+    padding: 0; /* Remover o preenchimento */
+    margin: 80px; /* Remover a margem */
+    border: 2px solid #ffc0cb; /* Borda ao redor do contêiner */
+    border-radius: 10px; /* Bordas arredondadas, se desejado */
+}
+
+.content {
+    display: flex; /* Usar flexbox para alinhar o gráfico e a quantidade */
+    justify-content: center; /* Centralizar os elementos horizontalmente */
+    align-items: center; /* Centralizar verticalmente */
+}
+
+canvas {
+    width: 100%; /* Ocupar toda a largura do gráfico */
+    height: 400px; /* Altura fixa do gráfico */
+    margin: 0; /* Remover a margem */
+    padding: 0; /* Remover o preenchimento */
+}
+
 footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--primary-color);
-    color: var(--bg-color);
+    background-color: #ffc0cb;
+    color: white;
     width: 100%;
     height: 3rem;
     margin-top: 2rem;
-
-    const data = [
-  {
-    x: 'nomeDasRedes',
-    y: quantidadeDeUsuarios,
-    type: 'bar',
-    marker: {
-      color: getComputedStyle(document.body).getPropertyValue('--primary-color')
-    }
-]
 }
